[package]
authors = ["Johan Thorén <johan@thoren.xyz>"]
description = "A Nagios compatible plugin to measure network jitter."
edition = "2021"
license = "ISC"
name = "check-jitter"
readme = "README.md"
repository = "https://github.com/johanthoren/check_jitter"
version = "0.2.8"

[lib]
path = "src/lib.rs"

[[bin]]
name = "check_jitter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4.18"
nagios-range = "0.2.5"
ping = "0.5.2"
rand = "0.8.5"
stderrlog = "0.5.4"
thiserror = "1.0.56"
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
pretty_assertions = "1.3.0"
