[package]
authors = ["Johan Thorén <johan@thoren.xyz>"]
description = "A monitoring plugin that measures network jitter."
edition = "2021"
license = "ISC"
name = "check-jitter"
readme = "README.md"
repository = "https://github.com/johanthoren/check_jitter"
version = "1.3.6"

[lib]
path = "src/lib.rs"

[[bin]]
name = "check_jitter"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
fern = "0.6.2"
log = "0.4.22"
nagios-range = "0.2.5"
ping = "0.5.2"
rand = "0.8.5"
stderrlog = "0.6"
thiserror = "1.0.63"
url = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
